--- a/angular-demo/src/app/components/contacts/contacts.component.html
+++ b/angular-demo/src/app/components/contacts/contacts.component.html
@@ -1,1 +1,25 @@
-<p>contacts works!</p>
+<h2>All Contacts</h2>
+<table>
+  <tr>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Phone number</th>
+    <th>Actions</th>
+  </tr>
+  <tr *ngFor="let contact of contacts">
+    <td>
+      {{ contact.firstName }}
+    </td>
+    <td>
+      {{ contact.lastName }}
+    </td>
+    <td>
+      {{ contact.phoneNumber }}
+    </td>
+    <td>
+      <button (click)="selectContact(contact)"></button>
+    </td>
+  </tr>
+</table>
+
+<app-contact-details [contact]="selectedContact"></app-contact-details>
