--- a/angular-demo/src/app/app.component.html
+++ b/angular-demo/src/app/app.component.html
@@ -6,6 +6,8 @@
   <div class="col-4" style="text-align: center;">
     <h1>Home Page</h1>
     <container></container>
+    <br>
+    <app-contacts></app-contacts>
   </div>
   <div class="col-4">
 
