--- a/angular-demo/src/app/components/contact-details/contact-details.component.html
+++ b/angular-demo/src/app/components/contact-details/contact-details.component.html
@@ -6,3 +6,4 @@
 </h5>
 <h5>Phone Number: {{ contact.phoneNumber }}</h5>
 <h5>Email: {{ contact.email }}</h5>
+<button class="btn btn-primary" (click)="addToFavorites()">Add to Favorites</button>
