--- a/angular-demo/src/app/components/contacts/contacts.component.html
+++ b/angular-demo/src/app/components/contacts/contacts.component.html
@@ -1,25 +1,60 @@
-<h2>All Contacts</h2>
-<table>
-  <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Phone number</th>
-    <th>Actions</th>
-  </tr>
-  <tr *ngFor="let contact of contacts">
-    <td>
-      {{ contact.firstName }}
-    </td>
-    <td>
-      {{ contact.lastName }}
-    </td>
-    <td>
-      {{ contact.phoneNumber }}
-    </td>
-    <td>
-      <button (click)="selectContact(contact)"></button>
-    </td>
-  </tr>
-</table>
+<div class="row">
+  <h2>All Contacts</h2>
+  <div class="col-1"></div>
+  <div class="col-10">
+    <table>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Phone number</th>
+        <th>Actions</th>
+      </tr>
+      <tr *ngFor="let contact of contacts">
+        <td>
+          {{ contact.firstName }}
+        </td>
+        <td>
+          {{ contact.lastName }}
+        </td>
+        <td>
+          {{ contact.phoneNumber }}
+        </td>
+        <td>
+          <button class="btn btn-primary" (click)="selectContact(contact)" style="margin-left: .5rem">Display Contact</button>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <div class="col-1"></div>
+</div>
+<div class="row">
+  <h2>Favorite Contacts</h2>
+  <div class="col-1"></div>
+  <div class="col-10">
+    <table>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Phone number</th>
+        <th>Actions</th>
+      </tr>
+      <tr *ngFor="let contact of favoriteContacts">
+        <td>
+          {{ contact.firstName }}
+        </td>
+        <td>
+          {{ contact.lastName }}
+        </td>
+        <td>
+          {{ contact.phoneNumber }}
+        </td>
+        <td>
+          <button class="btn btn-primary" (click)="selectContact(contact)" style="margin-left: .5rem">Display Contact</button>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <div class="col-1"></div>
+</div>
 
-<app-contact-details [contact]="selectedContact"></app-contact-details>
+<app-contact-details [contact]="selectedContact" (favRequest)="addToFavorites($event)"></app-contact-details>
