--- a/angular-demo/src/app/components/contacts/contacts.component.html
+++ b/angular-demo/src/app/components/contacts/contacts.component.html
@@ -6,7 +6,7 @@
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
-        <th>Phone number</th>
+        <th>Phone Number</th>
         <th>Actions</th>
       </tr>
       <tr *ngFor="let contact of contacts">
@@ -20,7 +20,7 @@
           {{ contact.phoneNumber }}
         </td>
         <td>
-          <button class="btn btn-primary" (click)="selectContact(contact)" style="margin-left: .5rem">Display Contact</button>
+          <button class="btn btn-primary" (click)="selectContact(contact.id)" style="margin-left: .5rem">Display Contact</button>
         </td>
       </tr>
     </table>
@@ -50,7 +50,7 @@
           {{ contact.phoneNumber }}
         </td>
         <td>
-          <button class="btn btn-primary" (click)="selectContact(contact)" style="margin-left: .5rem">Display Contact</button>
+          <button class="btn btn-primary" (click)="selectContact(contact.id)" style="margin-left: .5rem">Display Contact</button>
         </td>
       </tr>
     </table>
@@ -59,4 +59,4 @@
 </div>
 <br>
 
-<app-contact-details [contact]="selectedContact" (favRequest)="addToFavorites($event)"></app-contact-details>
+<app-contact-details *ngIf="selectedContactId" [contactId]="selectedContactId"> (favRequest)="addToFavorites($event)"></app-contact-details>
