--- a/angular-demo/src/app/components/contacts/contacts.component.html
+++ b/angular-demo/src/app/components/contacts/contacts.component.html
@@ -59,4 +59,6 @@
 </div>
 <br>
 
+<button (click)="createContact(contactToCreate)">Create Contact</button>
+
 <app-contact-details *ngIf="selectedContactId" [contactId]="selectedContactId"> (favRequest)="addToFavorites($event)"></app-contact-details>
